fixed a bug that meant the main content left the div container and became unreadable on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,6 @@ body {
     left: 0;
     bottom: 0;
     width: 100%;
-    min-width: 320px;
     background-color: rgba(130, 129, 127, 0.95);
     text-align: center;
     color: white;
@@ -300,6 +299,16 @@ textarea {
 
     #main-content {
         margin-top: 160px;
+        border: 2px solid #3d3d3d;
+        background-color: rgba(130, 129, 127, 0.95);
+        color: white;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        line-height: 35px;
+        font-size: 15px;
     }
 
     #about {
